high quality scaling in skia drawTransformedBitmap (tdf#132297)

Change-Id: Iba7219be1b0d95fdfdc708f31e2626b006a5e615